include/maplibre_native_c/map.h


typedef struct mln_screen_point {
  double x;
  double y;
} mln_screen_point;
typedef struct mln_string_view {
  const char* data;
  size_t size;
} mln_string_view;
typedef struct mln_offline_tile_pyramid_region_definition {
  uint32_t size;
  const char* style_url;
  mln_lat_lng_bounds bounds;
  double min_zoom;
  double max_zoom;
  float pixel_ratio;
  bool include_ideographs;
} mln_offline_tile_pyramid_region_definition;
typedef struct mln_offline_geometry_region_definition {
  uint32_t size;
  const char* style_url;
  const mln_geometry* geometry;
  double min_zoom;
  double max_zoom;
  float pixel_ratio;
  bool include_ideographs;
} mln_offline_geometry_region_definition;
typedef struct mln_offline_region_definition {
  uint32_t size;
  uint32_t type;
  union {
    mln_offline_tile_pyramid_region_definition tile_pyramid;
    mln_offline_geometry_region_definition geometry;
  } data;
} mln_offline_region_definition;
MLN_API mln_status mln_runtime_offline_region_create_start(
  mln_runtime runtime, const mln_offline_region_definition* definition,
  const uint8_t* metadata, size_t metadata_size,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get_start(
  mln_runtime runtime, mln_offline_region_id region_id,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_list_start(
  mln_runtime runtime, mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_merge_database_start(
  mln_runtime runtime, const char* side_database_path,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_update_metadata_start(
  mln_runtime runtime, mln_offline_region_id region_id, const uint8_t* metadata,
  size_t metadata_size, mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get_status_start(
  mln_runtime runtime, mln_offline_region_id region_id,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_set_observed_start(
  mln_runtime runtime, mln_offline_region_id region_id, bool observed,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_set_download_state_start(
  mln_runtime runtime, mln_offline_region_id region_id, uint32_t state,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_invalidate_start(
  mln_runtime runtime, mln_offline_region_id region_id,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_delete_start(
  mln_runtime runtime, mln_offline_region_id region_id,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_create_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_snapshot* out_region
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_snapshot* out_region, bool* out_found
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_list_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_list* out_regions
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_merge_database_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_list* out_regions
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_update_metadata_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_snapshot* out_region
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get_status_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_status* out_status
) MLN_NOEXCEPT;