include/maplibre_native_c/runtime.h

typedef int64_t mln_offline_region_id;
typedef uint64_t mln_offline_operation_id;
typedef struct mln_offline_region_status {
  uint32_t size;
  uint32_t download_state;
  uint64_t completed_resource_count;
  uint64_t completed_resource_size;
  uint64_t completed_tile_count;
  uint64_t required_tile_count;
  uint64_t completed_tile_size;
  uint64_t required_resource_count;
  bool required_resource_count_is_precise;
  bool complete;
} mln_offline_region_status;
typedef struct mln_runtime_options {
  uint32_t size;
  uint32_t flags;
  const char* asset_path;
  const char* cache_path;
  uint64_t event_mask;
} mln_runtime_options;
typedef union mln_runtime_event_payload {
  mln_runtime_event_render_frame render_frame;
  mln_runtime_event_render_map render_map;
  mln_runtime_event_tile_action tile_action;
  mln_runtime_event_offline_region_status offline_region_status;
  mln_runtime_event_offline_region_response_error offline_region_response_error;
  mln_runtime_event_offline_region_tile_count_limit
    offline_region_tile_count_limit;
  mln_runtime_event_offline_operation_completed offline_operation_completed;
  mln_runtime_event_camera_transition_finished camera_transition_finished;
} mln_runtime_event_payload;
typedef struct mln_runtime_event {
  uint32_t type;
  uint32_t source_type;
  uint64_t source;
  int32_t code;
  uint32_t payload_type;
  uint32_t message_offset;
  uint32_t message_size;
  mln_runtime_event_payload payload;
} mln_runtime_event;
typedef struct mln_resource_transform_response {
  uint32_t size;
  const char* url;
  void* context;
} mln_resource_transform_response;
MLN_API mln_status mln_resource_transform_response_set_url(
  mln_resource_transform_response* response, const char* url, size_t url_size
) MLN_NOEXCEPT;
typedef mln_status (*mln_resource_transform_callback)(
  void* user_data, uint32_t kind, const char* url,
  mln_resource_transform_response* out_response
);
typedef struct mln_resource_transform {
  uint32_t size;
  mln_resource_transform_callback callback;
  void* user_data;
} mln_resource_transform;
typedef mln_status (*mln_http_header_transform_callback)(
  void* user_data, uint32_t kind, const char* url,
  mln_http_header_transform_response* out_response
);
typedef struct mln_http_header_transform {
  uint32_t size;
  mln_http_header_transform_callback callback;
  void* user_data;
} mln_http_header_transform;
typedef struct mln_resource_response {
  uint32_t size;
  uint32_t status;
  uint32_t error_reason;
  const uint8_t* bytes;
  size_t byte_count;
  const char* error_message;
  bool must_revalidate;
  bool has_modified;
  int64_t modified_unix_ms;
  bool has_expires;
  int64_t expires_unix_ms;
  const char* etag;
  bool has_retry_after;
  int64_t retry_after_unix_ms;
} mln_resource_response;
typedef uint32_t (*mln_resource_provider_callback)(
  void* user_data, const mln_resource_request* request,
  mln_resource_request_handle handle
);
typedef struct mln_resource_provider {
  uint32_t size;
  mln_resource_provider_callback callback;
  void* user_data;
} mln_resource_provider;
MLN_API mln_runtime_options mln_runtime_options_default(void) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_create(
  const mln_runtime_options* options, mln_runtime* out_runtime
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_set_resource_provider(
  mln_runtime runtime, const mln_resource_provider* provider
) MLN_NOEXCEPT;
MLN_API mln_status
mln_runtime_clear_resource_provider(mln_runtime runtime) MLN_NOEXCEPT;
MLN_API mln_status mln_resource_request_complete(
  mln_resource_request_handle handle, const mln_resource_response* response
) MLN_NOEXCEPT;
MLN_API mln_status mln_resource_request_cancelled(
  mln_resource_request_handle handle, bool* out_cancelled
) MLN_NOEXCEPT;
MLN_API void mln_resource_request_release(
  mln_resource_request_handle handle
) MLN_NOEXCEPT;
MLN_API mln_status mln_resource_request_wait_until_retired(
  mln_resource_request_handle handle
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_set_resource_transform(
  mln_runtime runtime, const mln_resource_transform* transform
) MLN_NOEXCEPT;
MLN_API mln_status
mln_runtime_clear_resource_transform(mln_runtime runtime) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_set_http_header_transform(
  mln_runtime runtime, const mln_http_header_transform* transform
) MLN_NOEXCEPT;
MLN_API mln_status
mln_runtime_clear_http_header_transform(mln_runtime runtime) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_run_ambient_cache_operation_start(
  mln_runtime runtime, uint32_t operation,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_set_maximum_ambient_cache_size_start(
  mln_runtime runtime, uint64_t size, mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_operation_discard(
  mln_runtime runtime, mln_offline_operation_id operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_destroy(mln_runtime runtime) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_pump(
  mln_runtime runtime, int64_t timeout_ms, int64_t budget_ms
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_wake_source_acquire(
  mln_runtime runtime, mln_wake_source* out_source
) MLN_NOEXCEPT;