bindings/dart/lib/src/internal/c/maplibre_native_c.g.dart


@ffi.Native<mln_rendered_query_geometry Function(mln_screen_box)>()
external mln_rendered_query_geometry mln_rendered_query_geometry_box(
  mln_screen_box box,
);

@ffi.Native<
  mln_rendered_query_geometry Function(ffi.Pointer<mln_screen_point>, ffi.Size)
>()
external mln_rendered_query_geometry mln_rendered_query_geometry_line_string(
  ffi.Pointer<mln_screen_point> points,
  int point_count,
);

@ffi.Native<mln_rendered_query_geometry Function(mln_screen_point)>()
external mln_rendered_query_geometry mln_rendered_query_geometry_point(
  mln_screen_point point,
);

@ffi.Native<
  ffi.Int32 Function(mln_resource_request_handle, ffi.Pointer<ffi.Bool>)
>()
external int mln_resource_request_cancelled(
  int handle,
  ffi.Pointer<ffi.Bool> out_cancelled,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_resource_request_handle,
    ffi.Pointer<mln_resource_response>,
  )
>()
external int mln_resource_request_complete(
  int handle,
  ffi.Pointer<mln_resource_response> response,
);

@ffi.Native<ffi.Void Function(mln_resource_request_handle)>()
external void mln_resource_request_release(int handle);

@ffi.Native<ffi.Int32 Function(mln_resource_request_handle)>()
external int mln_resource_request_wait_until_retired(int handle);

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<mln_resource_transform_response>,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
  )
>()
external int mln_resource_transform_response_set_url(
  ffi.Pointer<mln_resource_transform_response> response,
  ffi.Pointer<ffi.Char> url,
  int url_size,
);

@ffi.Native<ffi.Int32 Function(mln_runtime)>()
external int mln_runtime_clear_http_header_transform(int runtime);

@ffi.Native<ffi.Int32 Function(mln_runtime)>()
external int mln_runtime_clear_resource_provider(int runtime);

@ffi.Native<ffi.Int32 Function(mln_runtime)>()
external int mln_runtime_clear_resource_transform(int runtime);

@ffi.Native<
  ffi.Int32 Function(ffi.Pointer<mln_runtime_options>, ffi.Pointer<mln_runtime>)
>()
external int mln_runtime_create(
  ffi.Pointer<mln_runtime_options> options,
  ffi.Pointer<mln_runtime> out_runtime,
);

@ffi.Native<ffi.Int32 Function(mln_runtime)>()
external int mln_runtime_destroy(int runtime);

@ffi.Native<ffi.Int32 Function(mln_runtime, mln_offline_operation_id)>()
external int mln_runtime_offline_operation_discard(
  int runtime,
  int operation_id,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    ffi.Pointer<mln_offline_region_definition>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<mln_offline_operation_id>,
  )
>()
external int mln_runtime_offline_region_create_start(
  int runtime,
  ffi.Pointer<mln_offline_region_definition> definition,
  ffi.Pointer<ffi.Uint8> metadata,
  int metadata_size,
  ffi.Pointer<mln_offline_operation_id> out_operation_id,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    mln_offline_operation_id,
    ffi.Pointer<mln_offline_region_snapshot>,
  )
>()
external int mln_runtime_offline_region_create_take_result(
  int runtime,
  int operation_id,
  ffi.Pointer<mln_offline_region_snapshot> out_region,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    mln_offline_region_id,
    ffi.Pointer<mln_offline_operation_id>,
  )
>()
external int mln_runtime_offline_region_delete_start(
  int runtime,
  int region_id,
  ffi.Pointer<mln_offline_operation_id> out_operation_id,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    mln_offline_region_id,
    ffi.Pointer<mln_offline_operation_id>,
  )
>()
external int mln_runtime_offline_region_get_start(
  int runtime,
  int region_id,
  ffi.Pointer<mln_offline_operation_id> out_operation_id,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    mln_offline_region_id,
    ffi.Pointer<mln_offline_operation_id>,
  )
>()
external int mln_runtime_offline_region_get_status_start(
  int runtime,
  int region_id,
  ffi.Pointer<mln_offline_operation_id> out_operation_id,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    mln_offline_operation_id,
    ffi.Pointer<mln_offline_region_status>,
  )
>()
external int mln_runtime_offline_region_get_status_take_result(
  int runtime,
  int operation_id,
  ffi.Pointer<mln_offline_region_status> out_status,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    mln_offline_operation_id,
    ffi.Pointer<mln_offline_region_snapshot>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int mln_runtime_offline_region_get_take_result(
  int runtime,
  int operation_id,
  ffi.Pointer<mln_offline_region_snapshot> out_region,
  ffi.Pointer<ffi.Bool> out_found,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    mln_offline_region_id,
    ffi.Pointer<mln_offline_operation_id>,
  )
>()
external int mln_runtime_offline_region_invalidate_start(
  int runtime,
  int region_id,
  ffi.Pointer<mln_offline_operation_id> out_operation_id,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    mln_offline_region_id,
    ffi.Uint32,
    ffi.Pointer<mln_offline_operation_id>,
  )
>()
external int mln_runtime_offline_region_set_download_state_start(
  int runtime,
  int region_id,
  int state,
  ffi.Pointer<mln_offline_operation_id> out_operation_id,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    mln_offline_region_id,
    ffi.Bool,
    ffi.Pointer<mln_offline_operation_id>,
  )
>()
external int mln_runtime_offline_region_set_observed_start(
  int runtime,
  int region_id,
  bool observed,
  ffi.Pointer<mln_offline_operation_id> out_operation_id,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    mln_offline_region_id,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<mln_offline_operation_id>,
  )
>()
external int mln_runtime_offline_region_update_metadata_start(
  int runtime,
  int region_id,
  ffi.Pointer<ffi.Uint8> metadata,
  int metadata_size,
  ffi.Pointer<mln_offline_operation_id> out_operation_id,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    mln_offline_operation_id,
    ffi.Pointer<mln_offline_region_snapshot>,
  )
>()
external int mln_runtime_offline_region_update_metadata_take_result(
  int runtime,
  int operation_id,
  ffi.Pointer<mln_offline_region_snapshot> out_region,
);

@ffi.Native<
  ffi.Int32 Function(mln_runtime, ffi.Pointer<mln_offline_operation_id>)
>()
external int mln_runtime_offline_regions_list_start(
  int runtime,
  ffi.Pointer<mln_offline_operation_id> out_operation_id,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    mln_offline_operation_id,
    ffi.Pointer<mln_offline_region_list>,
  )
>()
external int mln_runtime_offline_regions_list_take_result(
  int runtime,
  int operation_id,
  ffi.Pointer<mln_offline_region_list> out_regions,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<mln_offline_operation_id>,
  )
>()
external int mln_runtime_offline_regions_merge_database_start(
  int runtime,
  ffi.Pointer<ffi.Char> side_database_path,
  ffi.Pointer<mln_offline_operation_id> out_operation_id,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    mln_offline_operation_id,
    ffi.Pointer<mln_offline_region_list>,
  )
>()
external int mln_runtime_offline_regions_merge_database_take_result(
  int runtime,
  int operation_id,
  ffi.Pointer<mln_offline_region_list> out_regions,
);

@ffi.Native<mln_runtime_options Function()>()
external mln_runtime_options mln_runtime_options_default();

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    ffi.Pointer<mln_runtime_event>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int mln_runtime_poll_event(
  int runtime,
  ffi.Pointer<mln_runtime_event> out_event,
  ffi.Pointer<ffi.Bool> out_has_event,
);

@ffi.Native<ffi.Int32 Function(mln_runtime, ffi.Int64)>()
external int mln_runtime_pump(int runtime, int timeout_ms);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    ffi.Uint32,
    ffi.Pointer<mln_offline_operation_id>,
  )
>()
external int mln_runtime_run_ambient_cache_operation_start(
  int runtime,
  int operation,
  ffi.Pointer<mln_offline_operation_id> out_operation_id,
);

@ffi.Native<
  ffi.Int32 Function(mln_runtime, ffi.Pointer<mln_http_header_transform>)
>()
external int mln_runtime_set_http_header_transform(
  int runtime,
  ffi.Pointer<mln_http_header_transform> transform,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    ffi.Uint64,
    ffi.Pointer<mln_offline_operation_id>,
  )
>()
external int mln_runtime_set_maximum_ambient_cache_size_start(
  int runtime,
  int size,
  ffi.Pointer<mln_offline_operation_id> out_operation_id,
);

@ffi.Native<
  ffi.Int32 Function(mln_runtime, ffi.Pointer<mln_resource_provider>)
>()
external int mln_runtime_set_resource_provider(
  int runtime,
  ffi.Pointer<mln_resource_provider> provider,
);

@ffi.Native<
  ffi.Int32 Function(mln_runtime, ffi.Pointer<mln_resource_transform>)
>()
external int mln_runtime_set_resource_transform(
  int runtime,
  ffi.Pointer<mln_resource_transform> transform,
);

@ffi.Native<ffi.Int32 Function(mln_runtime, ffi.Pointer<mln_wake_source>)>()
external int mln_runtime_wake_source_acquire(
  int runtime,
  ffi.Pointer<mln_wake_source> out_source,
);

@ffi.Native<mln_source_feature_query_options Function()>()
external mln_source_feature_query_options
mln_source_feature_query_options_default();

@ffi.Native<ffi.Int32 Function(mln_style_id_list, ffi.Pointer<ffi.Size>)>()
external int mln_style_id_list_count(int list, ffi.Pointer<ffi.Size> out_count);

@ffi.Native<ffi.Void Function(mln_style_id_list)>()
external void mln_style_id_list_destroy(int list);

@ffi.Native<
  ffi.Int32 Function(mln_style_id_list, ffi.Size, ffi.Pointer<mln_string_view>)
>()
external int mln_style_id_list_get(
  int list,
  int index,
  ffi.Pointer<mln_string_view> out_id,
);

@ffi.Native<mln_style_image_info Function()>()
external mln_style_image_info mln_style_image_info_default();

@ffi.Native<mln_style_image_options Function()>()
external mln_style_image_options mln_style_image_options_default();

@ffi.Native<ffi.Int32 Function(mln_style_string_list, ffi.Pointer<ffi.Size>)>()
external int mln_style_string_list_count(
  int list,
  ffi.Pointer<ffi.Size> out_count,
);

@ffi.Native<ffi.Void Function(mln_style_string_list)>()
external void mln_style_string_list_destroy(int list);

@ffi.Native<
  ffi.Int32 Function(
    mln_style_string_list,
    ffi.Size,
    ffi.Pointer<mln_string_view>,
  )
>()
external int mln_style_string_list_get(
  int list,
  int index,
  ffi.Pointer<mln_string_view> out_value,
);

@ffi.Native<mln_style_tile_source_options Function()>()
external mln_style_tile_source_options mln_style_tile_source_options_default();

@ffi.Native<mln_style_transition_options Function()>()
external mln_style_transition_options mln_style_transition_options_default();

@ffi.Native<ffi.Uint32 Function()>()
external int mln_supported_render_backend_mask();

@ffi.Native<mln_texture_image_info Function()>()
external mln_texture_image_info mln_texture_image_info_default();

@ffi.Native<
  ffi.Int32 Function(
    mln_render_session,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<mln_texture_image_info>,
  )
>()
external int mln_texture_read_premultiplied_rgba8(
  int session,
  ffi.Pointer<ffi.Uint8> out_data,
  int out_data_capacity,
  ffi.Pointer<mln_texture_image_info> out_info,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> mln_thread_last_error_message();

@ffi.Native<ffi.Uint64 Function()>()
external int mln_thread_token();

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Pointer<mln_vulkan_borrowed_texture_descriptor>,
    ffi.Pointer<mln_render_session>,
  )
>()
external int mln_vulkan_borrowed_texture_attach(
  int map,
  ffi.Pointer<mln_vulkan_borrowed_texture_descriptor> descriptor,
  ffi.Pointer<mln_render_session> out_session,
);

@ffi.Native<mln_vulkan_borrowed_texture_descriptor Function()>()
external mln_vulkan_borrowed_texture_descriptor
mln_vulkan_borrowed_texture_descriptor_default();
